# flink

./: .bazelrc  .gitignore  .lift.toml  BUILD.bazel  MODULE.bazel  WORKSPACE  azure-pipelines.yml  bazel_build_with_codegen.sh  pom.xml  verify_bazel_build.sh
.github/: renovate.json
docs/: README.md  _config.yml  config.toml  setup_docs.sh
flink-annotations/: BUILD.bazel
flink-architecture-tests/flink-architecture-tests-test/: BUILD.bazel
flink-clients/: BUILD.bazel
flink-connectors/: pom.xml
flink-connectors/flink-connector-base/: BUILD.bazel
flink-connectors/flink-connector-datagen/: BUILD.bazel
flink-connectors/flink-connector-files/: BUILD.bazel
flink-connectors/flink-file-sink-common/: BUILD.bazel
flink-connectors/flink-hadoop-compatibility/: BUILD.bazel
flink-container/: BUILD.bazel
flink-core/: BUILD.bazel  pom.xml
flink-core-api/: BUILD.bazel
flink-core/src/main/java/org/apache/flink/util/: NetUtils.java
flink-core/src/test/java/org/apache/flink/api/common/typeutils/: TypeSerializerUpgradeTestBase.java
flink-core/src/test/java/org/apache/flink/api/java/typeutils/runtime/kryo/: KryoSerializerCompatibilityTest.java
flink-core/src/test/java/org/apache/flink/architecture/: TestCodeArchitectureTest.java
flink-core/src/test/java/org/apache/flink/core/fs/: InitOutputPathTest.java
flink-core/src/test/java/org/apache/flink/testutils/: ArchUnitBazelSupport.java
flink-core/src/test/java/org/apache/flink/util/: FileUtilsTest.java
flink-datastream/: BUILD.bazel
flink-datastream-api/: BUILD.bazel
flink-dist/: BUILD.bazel
flink-docs/: BUILD.bazel  pom.xml
flink-end-to-end-tests/: pom.xml  run-nightly-tests.sh
flink-end-to-end-tests/flink-confluent-schema-registry/: BUILD.bazel
flink-end-to-end-tests/flink-confluent-schema-registry/src/main/resources/avro/: input-record.avsc
flink-end-to-end-tests/flink-confluent-schema-registry/src/test/java/org/apache/flink/schema/registry/test/: AvroConfluentITCase.java  SchemaLoader.java
flink-end-to-end-tests/flink-datastream-allround-test/: BUILD.bazel
flink-end-to-end-tests/flink-end-to-end-tests-common/: BUILD.bazel
flink-end-to-end-tests/flink-end-to-end-tests-scala/: BUILD.bazel
flink-end-to-end-tests/flink-end-to-end-tests-table-api/: BUILD.bazel
flink-end-to-end-tests/flink-local-recovery-and-allocation-test/: BUILD.bazel
flink-end-to-end-tests/flink-plugins-test/: BUILD.bazel
flink-end-to-end-tests/flink-plugins-test/another-dummy-fs/: BUILD.bazel
flink-end-to-end-tests/flink-plugins-test/dummy-fs/: BUILD.bazel
flink-end-to-end-tests/flink-python-test/: BUILD.bazel
flink-end-to-end-tests/flink-state-evolution-test/: BUILD.bazel
flink-end-to-end-tests/flink-tpch-test/: BUILD.bazel
flink-examples/flink-examples-streaming/: BUILD.bazel  pom.xml
flink-external-resources/flink-external-resource-gpu/: BUILD.bazel
flink-filesystems/: pom.xml
flink-filesystems/flink-azure-fs-hadoop/: BUILD.bazel
flink-filesystems/flink-gs-fs-hadoop/: BUILD.bazel  pom.xml
flink-formats/: pom.xml
flink-jepsen/: project.clj
flink-kubernetes/: BUILD.bazel  pom.xml
flink-python/: BUILD.bazel  pom.xml  setup.py
flink-python/dev/: dev-requirements.txt
flink-python/src/main/java/org/apache/flink/client/python/: PythonDriver.java  PythonFunctionFactoryImpl.java
flink-python/src/main/java/org/apache/flink/formats/csv/: CsvRowDeserializationSchema.java  CsvRowSerializationSchema.java
flink-runtime/: BUILD.bazel
flink-runtime-web/: BUILD.bazel
flink-runtime-web/web-dashboard/: package-lock.json  package.json
flink-runtime/src/test/java/org/apache/flink/runtime/checkpoint/: DefaultCheckpointPlanCalculatorTest.java
flink-runtime/src/test/java/org/apache/flink/runtime/deployment/: CachedShuffleDescriptorsTest.java  TaskDeploymentDescriptorFactoryTest.java
flink-runtime/src/test/java/org/apache/flink/runtime/dispatcher/: DispatcherTest.java
flink-runtime/src/test/java/org/apache/flink/runtime/executiongraph/: ArchivedExecutionGraphTest.java  ArchivedExecutionVertexWithSpeculativeExecutionTest.java  DefaultExecutionGraphDeploymentTest.java  DefaultExecutionGraphDeploymentWithSmallBlobCacheSizeLimitTest.java  EdgeManagerTest.java  ExecutionGraphFinishTest.java  ExecutionGraphRestartTest.java  ExecutionGraphSuspendTest.java  ExecutionGraphTestUtils.java  ExecutionTest.java  ExecutionVertexCancelTest.java  ExecutionVertexTest.java  FinalizeOnMasterTest.java  IntermediateResultPartitionTest.java  MainThreadExecutionGraphTestUtils.java  SpeculativeExecutionVertexTest.java
flink-runtime/src/test/java/org/apache/flink/runtime/executiongraph/failover/: ExecutionFailureHandlerTest.java
flink-runtime/src/test/java/org/apache/flink/runtime/jobmaster/slotpool/: SlotPoolUtils.java
flink-runtime/src/test/java/org/apache/flink/runtime/scheduler/: DefaultExecutionDeployerTest.java  DefaultOperatorCoordinatorHandlerTest.java  DefaultSchedulerTest.java  SchedulerTestingUtils.java
flink-runtime/src/test/java/org/apache/flink/runtime/scheduler/adaptive/: CreatingExecutionGraphTest.java
flink-runtime/src/test/java/org/apache/flink/runtime/scheduler/adaptivebatch/: AdaptiveBatchSchedulerTest.java  SpeculativeExecutionTest.java
flink-runtime/src/test/java/org/apache/flink/runtime/scheduler/exceptionhistory/: FailureHandlingResultSnapshotTest.java  RootExceptionHistoryEntryTest.java
flink-runtime/src/test/java/org/apache/flink/runtime/scheduler/slowtaskdetector/: ExecutionTimeBasedSlowTaskDetectorTest.java
flink-runtime/src/test/java/org/apache/flink/runtime/taskexecutor/: TaskManagerRunnerConfigurationTest.java
flink-runtime/src/test/java/org/apache/flink/runtime/webmonitor/threadinfo/: VertexThreadInfoTrackerTest.java
flink-streaming-java/: BUILD.bazel
flink-streaming-java/src/main/java/org/apache/flink/streaming/api/datastream/: DataStream.java
flink-streaming-java/src/main/java/org/apache/flink/streaming/api/functions/sink/: PrintSink.java  SinkFunction.java
flink-streaming-java/src/test/java/org/apache/flink/streaming/api/graph/: StreamingJobGraphGeneratorTest.java
(+259 files in other folders)
