# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-annotations module.

This module contains annotations used throughout Apache Flink to mark API stability levels:
- @Public: Stable public API
- @PublicEvolving: Evolving public API
- @Experimental: Experimental API
- @Internal: Internal API (not for public use)
- @VisibleForTesting: Package-private elements exposed for testing
- Documentation annotations for configuration
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library")

# Main library target
flink_java_library(
    name = "flink-annotations",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
)

# No tests - this module contains only annotations
