# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-clients module.

This module provides the client libraries for submitting and managing Flink jobs.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

# Main library target
flink_java_library(
    name = "flink-clients",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"], allow_empty = True),
    resource_strip_prefix = "flink-clients/src/main/resources",
    deps = [
        "//flink-annotations",
        "//flink-core",
        "//flink-core-api",
        "//flink-datastream",
        "//flink-rpc/flink-rpc-core",
        "//flink-runtime",
        "//flink-streaming-java",
        "@flink_shaded//:org_apache_flink_flink_shaded_guava",
        "@flink_shaded//:org_apache_flink_flink_shaded_netty",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:commons_cli_commons_cli",
        "@maven//:commons_collections_commons_collections",
        "@maven//:commons_io_commons_io",
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
)

# Tests
flink_java_tests(
    name = "tests",
    # Exclude tests that require target/maven-test-jar.jar (Maven-specific build artifact)
    # TODO: Build test JAR in Bazel and provide via data attribute
    srcs = glob(
        ["src/test/java/**/*Test.java"],
        exclude = [
            "src/test/java/**/CliFrontendDynamicPropertiesTest.java",
            "src/test/java/**/CliFrontendInfoTest.java",
            "src/test/java/**/CliFrontendPackageProgramTest.java",
            "src/test/java/**/CliFrontendRunTest.java",
        ],
    ),
    deps = [
        ":flink-clients",
        # Test utilities from flink-runtime test-jar
        "//flink-runtime:flink-runtime-test-jar",
        "//flink-core:flink-core-test-jar",  # Per pom.xml lines 93-98
        # Direct dependencies to fix strict dependency warnings
        "//flink-core",
        "//flink-core-api",
        "//flink-rpc/flink-rpc-core",
        "@maven//:commons_cli_commons_cli",
        "@maven//:commons_io_commons_io",
        "@maven//:com_google_code_findbugs_jsr305",
        "@flink_shaded//:org_apache_flink_flink_shaded_guava",
        "@flink_shaded//:org_apache_flink_flink_shaded_netty",
    ],
    runtime_deps = [
        # Log4j 1.2 API bridge for Hadoop classes (provides log4j 1.x API via log4j 2.x)
        # PerJobMiniClusterFactoryTest uses Hadoop which requires log4j 1.x API
        "@maven//:org_apache_logging_log4j_log4j_1_2_api",
    ],
)
