# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-datastream module.

This module bridges the DataStream API with the streaming runtime implementation.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

# Main library target
flink_java_library(
    name = "flink-datastream",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"], allow_empty = True),
    resource_strip_prefix = "flink-datastream/src/main/resources",
    deps = [
        "//flink-annotations",
        "//flink-connectors/flink-connector-datagen",
        "//flink-core",
        "//flink-core-api",
        "//flink-datastream-api",
        "//flink-metrics/flink-metrics-core",
        "//flink-runtime",
        "//flink-streaming-java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_apache_commons_commons_compress",
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
)

# Tests
flink_java_tests(
    name = "tests",
    deps = [
        ":flink-datastream",
        # Test utilities from flink-runtime test-jar
        "//flink-runtime:flink-runtime-test-jar",
        # Direct dependencies to fix strict dependency warnings
        "//flink-core",
        "//flink-streaming-java",
        "@maven//:com_google_code_findbugs_jsr305",
    ],
)
