# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-docs module.

This module contains documentation generation utilities and examples.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

flink_java_library(
    name = "flink-docs",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"], allow_empty = True),
    resource_strip_prefix = "flink-docs/src/main/resources",
    testonly = True,
    deps = [
        "//flink-annotations",
        "//flink-core",
        "//flink-core-api",
        "//flink-metrics/flink-metrics-influxdb",
        "//flink-metrics/flink-metrics-otel",
        "//flink-metrics/flink-metrics-prometheus",
        "//flink-runtime",
        "//flink-runtime:flink-runtime-test-jar",
        "//flink-runtime-web",
        "//flink-streaming-java",
        "//flink-table/flink-sql-client",
        "//flink-table/flink-sql-gateway",
        "//flink-table/flink-sql-gateway:flink-sql-gateway-test-jar",
        "//flink-table/flink-table-api-java",
        "@flink_shaded//:org_apache_flink_flink_shaded_asm_9",
        "@flink_shaded//:org_apache_flink_flink_shaded_jackson",
        "@flink_shaded//:org_apache_flink_flink_shaded_jackson_module_jsonSchema",
        "@flink_shaded//:org_apache_flink_flink_shaded_swagger",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
)

flink_java_tests(
    name = "tests",
    deps = [":flink-docs"],
)
